--- a/gallery.html
+++ b/gallery.html
@@ -242,8 +242,8 @@ nav {
     <div class="ff">
       
       <div class="contact-details">
-        <span>Contact us: <a href="dhruv1732.be23@chitkara.edu.in">dhruv1732.be23@chitara.edu.in</a></span>
-        <span>Phone: 9996633907</span>
+        <span>Contact us: <a href="arpit1707.be23@chitkara.edu.in">arpit1707.be23@chitara.edu.in</a></span>
+        <span>Phone: 9467702434/span>
       </div>
       
     </div>
